--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "axios": "^0.26.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "vite-plugin-singlefile": "^0.9.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
