--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-  "name": "netping_manager_client",
-  "private": true,
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "axios": "^0.26.1",
-    "jwt-decode": "^3.1.2",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-router-dom": "^6.3.0",
-    "vite-plugin-singlefile": "^0.9.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@vitejs/plugin-react": "^1.3.0",
-    "autoprefixer": "^10.4.4",
-    "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.24",
-    "vite": "^2.9.2"
-  }
+	"name": "netping_manager_client",
+	"private": true,
+	"version": "0.0.0",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build --base='/website/'",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"axios": "^0.26.1",
+		"jwt-decode": "^3.1.2",
+		"react": "^18.0.0",
+		"react-dom": "^18.0.0",
+		"react-router-dom": "^6.3.0",
+		"vite-plugin-singlefile": "^0.9.0"
+	},
+	"devDependencies": {
+		"@types/react": "^18.0.0",
+		"@types/react-dom": "^18.0.0",
+		"@vitejs/plugin-react": "^1.3.0",
+		"autoprefixer": "^10.4.4",
+		"postcss": "^8.4.12",
+		"tailwindcss": "^3.0.24",
+		"vite": "^2.9.2"
+	}
 }
